fix color to background to fix the contrast error

--- a/client/src/styles/bootstrap-theme.scss
+++ b/client/src/styles/bootstrap-theme.scss
@@ -43,7 +43,7 @@ input[type="number"] {
 
 .bg-primary-dark {
   //background-color: #20094b;
-  background-color: #37abc8;
+  background-color: #15687c;
 }
 
 .bg-dark-gradient {
@@ -68,18 +68,19 @@ input[type="number"] {
   //   #37abc8 50%,
   //   #368b94 20%
   // );
-  background-image: linear-gradient(
-    320deg,
-    hsl(187deg 63% 92%) 0%,
-    hsl(186deg 56% 85%) 25%,
-    hsl(186deg 54% 77%) 41%,
-    hsl(185deg 53% 70%) 53%,
-    hsl(185deg 54% 62%) 63%,
-    hsl(187deg 54% 59%) 72%,
-    hsl(189deg 55% 56%) 80%,
-    hsl(191deg 56% 53%) 88%,
-    hsl(192deg 57% 50%) 100%
-  );
+  // background-image: linear-gradient(
+  //   320deg,
+  //   hsl(187deg 63% 92%) 0%,
+  //   hsl(186deg 56% 85%) 25%,
+  //   hsl(186deg 54% 77%) 41%,
+  //   hsl(185deg 53% 70%) 53%,
+  //   hsl(185deg 54% 62%) 63%,
+  //   hsl(187deg 54% 59%) 72%,
+  //   hsl(189deg 55% 56%) 80%,
+  //   hsl(191deg 56% 53%) 88%,
+  //   hsl(192deg 57% 50%) 100%
+  // );
+  background-color: #15687c;
 }
 
 .border-transparent {
