--- a/client/src/styles/bootstrap-variables.scss
+++ b/client/src/styles/bootstrap-variables.scss
@@ -1,6 +1,7 @@
 // colors
 //$primary: #320e74;
-$primary: #37abc8;
+//$primary: #37abc8;
+$primary: #297f94;
 $info: #0d6efd;
 $warning: #fd7e14;
 $success: #0dab61;
